--- a/gan_module/Visuallized.ipynb
+++ b/gan_module/Visuallized.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'signal': [0.18531812727451324, 0.9329000115394592]}\n"
+     ]
+    }
+   ],
    "source": [
     "import mlcTest as mt\n",
     "import pandas as pd\n",
@@ -612,6 +620,212 @@
     "print(\"P(Interference | Constellation Error) = \", interference_cons_error_rate)\n",
     "print(\"P(Interference | No Constellation Error) = \", interference_cons_n_error_rate)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = \"./result/method\"\n",
+    "test_result = []\n",
+    "for i in range(1,11):\n",
+    "    i = str(i)\n",
+    "    data = pd.read_csv(result+i+\".csv\")\n",
+    "    test_result.append(data)\n",
+    "test = pd.concat(test_result, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.index += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>gen_loss</th>\n",
+       "      <th>gen_relative_loss</th>\n",
+       "      <th>signal_loss</th>\n",
+       "      <th>signal_relative_loss</th>\n",
+       "      <th>noise_loss</th>\n",
+       "      <th>noise_relative_loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.018536</td>\n",
+       "      <td>3.903176</td>\n",
+       "      <td>0.191420</td>\n",
+       "      <td>54.468190</td>\n",
+       "      <td>0.057665</td>\n",
+       "      <td>98.61353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.020388</td>\n",
+       "      <td>234.106350</td>\n",
+       "      <td>0.167512</td>\n",
+       "      <td>-16.027079</td>\n",
+       "      <td>0.058447</td>\n",
+       "      <td>453.40950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.017184</td>\n",
+       "      <td>1.485669</td>\n",
+       "      <td>0.159658</td>\n",
+       "      <td>9.362474</td>\n",
+       "      <td>0.058028</td>\n",
+       "      <td>397.06805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.017878</td>\n",
+       "      <td>-10.840482</td>\n",
+       "      <td>0.160939</td>\n",
+       "      <td>-56.187180</td>\n",
+       "      <td>0.058335</td>\n",
+       "      <td>-512.63350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.017923</td>\n",
+       "      <td>8.077351</td>\n",
+       "      <td>0.162093</td>\n",
+       "      <td>-28.411873</td>\n",
+       "      <td>0.058148</td>\n",
+       "      <td>417.12973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.017491</td>\n",
+       "      <td>2.484557</td>\n",
+       "      <td>0.160338</td>\n",
+       "      <td>34.378640</td>\n",
+       "      <td>0.057734</td>\n",
+       "      <td>565.52010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.018586</td>\n",
+       "      <td>-10.530231</td>\n",
+       "      <td>0.161917</td>\n",
+       "      <td>-20.161768</td>\n",
+       "      <td>0.058923</td>\n",
+       "      <td>-249.28694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.019018</td>\n",
+       "      <td>1.679274</td>\n",
+       "      <td>0.165585</td>\n",
+       "      <td>16.856802</td>\n",
+       "      <td>0.058480</td>\n",
+       "      <td>2276.33130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.018424</td>\n",
+       "      <td>1.647986</td>\n",
+       "      <td>0.159293</td>\n",
+       "      <td>17.752644</td>\n",
+       "      <td>0.058828</td>\n",
+       "      <td>375.52936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.020115</td>\n",
+       "      <td>12.817821</td>\n",
+       "      <td>0.160217</td>\n",
+       "      <td>-78.900410</td>\n",
+       "      <td>0.057928</td>\n",
+       "      <td>-436.68677</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0  gen_loss  gen_relative_loss  signal_loss  \\\n",
+       "1            0  0.018536           3.903176     0.191420   \n",
+       "2            0  0.020388         234.106350     0.167512   \n",
+       "3            0  0.017184           1.485669     0.159658   \n",
+       "4            0  0.017878         -10.840482     0.160939   \n",
+       "5            0  0.017923           8.077351     0.162093   \n",
+       "6            0  0.017491           2.484557     0.160338   \n",
+       "7            0  0.018586         -10.530231     0.161917   \n",
+       "8            0  0.019018           1.679274     0.165585   \n",
+       "9            0  0.018424           1.647986     0.159293   \n",
+       "10           0  0.020115          12.817821     0.160217   \n",
+       "\n",
+       "    signal_relative_loss  noise_loss  noise_relative_loss  \n",
+       "1              54.468190    0.057665             98.61353  \n",
+       "2             -16.027079    0.058447            453.40950  \n",
+       "3               9.362474    0.058028            397.06805  \n",
+       "4             -56.187180    0.058335           -512.63350  \n",
+       "5             -28.411873    0.058148            417.12973  \n",
+       "6              34.378640    0.057734            565.52010  \n",
+       "7             -20.161768    0.058923           -249.28694  \n",
+       "8              16.856802    0.058480           2276.33130  \n",
+       "9              17.752644    0.058828            375.52936  \n",
+       "10            -78.900410    0.057928           -436.68677  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
