--- a/gan_module/gan_module.ipynb
+++ b/gan_module/gan_module.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'signal': [0.19666559994220734, 0.9297999739646912]}\n"
+      "{'signal': [0.1887183040380478, 0.9311000108718872]}\n"
      ]
     }
    ],
@@ -38,17 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Latest checkpoint restored!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers\n",
@@ -108,7 +100,7 @@
     "\n",
     "def make_generator():\n",
     "    model = tf.keras.Sequential()\n",
-    "    model.add(layers.Conv2D(16, (1, 1), activation='relu', input_shape=(1, 50, 2)))\n",
+    "    model.add(layers.Conv2D(16, (1, 1), activation='relu', input_shape=(1, 50, 3)))\n",
     "    model.add(layers.MaxPooling2D(1,1))\n",
     "    model.add(layers.Conv2D(32, 3, padding='same', activation='relu'))\n",
     "    model.add(layers.MaxPooling2D(1,1))\n",
@@ -148,7 +140,7 @@
     "    return cross_entropy(tf.ones_like(fake_output), fake_output)\n",
     "\n",
     "def identity_loss(real, fake):\n",
-    "    loss = mean_abs_loss(real, fake)\n",
+    "    loss = reduced(real, fake)\n",
     "    return LAMBDA * 0.5 * loss\n",
     "\n",
     "def noise_loss(noise_output):\n",
@@ -199,14 +191,14 @@
     "    my_table.real = (my_table.real / real_x) - real_y\n",
     "    my_table.imag = (my_table.imag/ imag_x) - imag_y\n",
     "    '''\n",
-    "    train_feature = my_table.loc[:, ('real', 'imag')]\n",
+    "    train_feature = my_table.loc[:, ('real', 'imag','interference')]\n",
     "    train_label = my_table.loc[:, ('label_real', 'label_imag')]\n",
     "    noise = my_table.loc[:, ('N_R', 'N_I')]\n",
     "    test_feature = tf.cast(train_feature, tf.float32)\n",
     "    test_label = tf.cast(train_label, tf.float32)\n",
     "    test_noise = tf.cast(noise, tf.float32)\n",
     "    block = int(test_feature.shape[0]/50)\n",
-    "    test_feature = tf.reshape(test_feature,(block,1,50,2))\n",
+    "    test_feature = tf.reshape(test_feature,(block,1,50,3))\n",
     "    test_label = tf.reshape(test_label, (block,1,50,2))\n",
     "    test_noise = tf.reshape(test_noise, (block, 1,50,2))\n",
     "    symbol = my_table.loc[:, 'label']\n",
@@ -228,33 +220,11 @@
     "discriminator_t_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
     "\n",
     "\n",
-    "checkpoint_path = \"./checkpoints/method_9\"\n",
-    "ckpt = tf.train.Checkpoint(generator_s=generator_s,\n",
-    "                           generator_n=generator_n,\n",
-    "                           generator_i=generator_i,\n",
-    "                           discriminator_t=discriminator_t,\n",
-    "                           discriminator_d=discriminator_d,\n",
-    "                           generator_s_optimizer=generator_s_optimizer,\n",
-    "                           generator_n_optimizer=generator_n_optimizer,\n",
-    "                           generator_i_optimizer=generator_i_optimizer,\n",
-    "                           discriminator_d_optimizer=discriminator_d_optimizer,\n",
-    "                           discriminator_t_optimizer=discriminator_t_optimizer)\n",
-    "\n",
-    "ckpt_manager = tf.train.CheckpointManager(ckpt, checkpoint_path, max_to_keep=5)\n",
-    "\n",
-    "# if a checkpoint exists, restore the latest checkpoint.\n",
-    "if ckpt_manager.latest_checkpoint:\n",
-    "    ckpt.restore(ckpt_manager.latest_checkpoint)\n",
-    "    print ('Latest checkpoint restored!!')\n",
-    "    \n",
-    "\n",
-    "\n",
     "LAMBDA = 100\n",
     "EPOCHS = 40\n",
-    "data = \"my_data\"\n",
-    "data_label = \"my_labels\"\n",
+    "data = \"my_data9\"\n",
+    "data_label = \"my_labels9\"\n",
     "data = dataset(data, data_label)\n",
-    "file_directory = './result/tes2/'\n",
     "feature, labels, symbol, noise = shuffle_data(data)\n",
     "\n",
     "BUFFER_SIZE = 50\n",
@@ -262,6 +232,93 @@
     "train_f = tf.data.Dataset.from_tensor_slices(feature).shuffle(BUFFER_SIZE).batch(BATCH_SIZE)\n",
     "train_l = tf.data.Dataset.from_tensor_slices(labels).shuffle(BUFFER_SIZE).batch(BATCH_SIZE)\n",
     "train_n = tf.data.Dataset.from_tensor_slices(noise).shuffle(BUFFER_SIZE).batch(BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = \"my_data2\"\n",
+    "data_label = \"my_labels2\"\n",
+    "data = dataset(data, data_label)\n",
+    "feature, labels, symbol, noise = shuffle_data(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1800, 1, 50, 3), dtype=float32, numpy=\n",
+       "array([[[[ 0.10994416, -0.6041307 ,  1.        ],\n",
+       "         [-0.631116  , -0.7077427 ,  1.        ],\n",
+       "         [ 0.58133477,  1.0377582 ,  1.        ],\n",
+       "         ...,\n",
+       "         [-0.5012339 , -0.20269427,  1.        ],\n",
+       "         [-0.54708403, -0.82357615,  1.        ],\n",
+       "         [ 0.07319508, -0.18521655,  1.        ]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.12745598, -0.57126164,  1.        ],\n",
+       "         [ 0.14743574,  0.08450048,  1.        ],\n",
+       "         [-1.1996803 , -0.6374312 ,  1.        ],\n",
+       "         ...,\n",
+       "         [ 0.89849305,  0.33909002,  0.        ],\n",
+       "         [ 1.0944104 , -0.09126516,  0.        ],\n",
+       "         [-0.23160209, -0.8577409 ,  0.        ]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.24756332, -0.40372282,  0.        ],\n",
+       "         [ 0.2517316 ,  0.18184757,  0.        ],\n",
+       "         [ 0.17659989,  0.83757323,  0.        ],\n",
+       "         ...,\n",
+       "         [ 0.38173804, -0.2742804 ,  0.        ],\n",
+       "         [ 0.9795173 ,  0.9120796 ,  0.        ],\n",
+       "         [ 0.993928  , -0.40394238,  0.        ]]],\n",
+       "\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "\n",
+       "       [[[ 1.0704478 , -0.82411754,  1.        ],\n",
+       "         [ 0.7131251 , -0.7669763 ,  1.        ],\n",
+       "         [ 0.52348363, -1.2603575 ,  1.        ],\n",
+       "         ...,\n",
+       "         [-0.7567104 ,  0.8079492 ,  1.        ],\n",
+       "         [ 0.71830404, -0.19130579,  1.        ],\n",
+       "         [-0.7463313 ,  0.55545753,  1.        ]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.5107773 , -0.08257426,  1.        ],\n",
+       "         [ 0.00631487,  0.64089423,  1.        ],\n",
+       "         [ 0.6637719 ,  0.6818099 ,  1.        ],\n",
+       "         ...,\n",
+       "         [ 0.519952  ,  0.5197553 ,  1.        ],\n",
+       "         [ 0.77382463, -1.1663514 ,  1.        ],\n",
+       "         [ 0.10311094,  1.2587925 ,  1.        ]]],\n",
+       "\n",
+       "\n",
+       "       [[[-0.47094148, -0.48275965,  1.        ],\n",
+       "         [-0.61960995,  0.8703856 ,  1.        ],\n",
+       "         [ 0.15600108,  0.7160645 ,  1.        ],\n",
+       "         ...,\n",
+       "         [-0.70147115,  0.53118885,  1.        ],\n",
+       "         [ 0.77037776,  0.09539896,  1.        ],\n",
+       "         [ 0.05239709,  1.1797714 ,  1.        ]]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature"
    ]
   },
   {
@@ -2681,6 +2738,264 @@
    ],
    "source": [
     "test.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_generator(blockSize):\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(layers.Conv2D(16, (1, 1), strides=(1,1), activation=\"linear\", input_shape=(1, blockSize, 3)))\n",
+    "    model.add(layers.AveragePooling2D((1,1), strides=(1,1)))\n",
+    "    model.add(layers.Conv2D(32, 3, activation=\"linear\", padding='same'))\n",
+    "    model.add(layers.AveragePooling2D((1,1), strides=(1,1)))\n",
+    "    model.add(layers.Conv2D(64, 3, activation=\"linear\", padding='same'))\n",
+    "    model.add(layers.AveragePooling2D((1,1), strides=(1,1)))\n",
+    "    model.add(layers.Dense(32, activation=\"linear\"))\n",
+    "    model.add(layers.Dense(2))\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = make_generator(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_51\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_129 (Conv2D)          (None, 1, 50, 16)         64        \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_73 (Averag (None, 1, 50, 16)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_130 (Conv2D)          (None, 1, 50, 32)         4640      \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_74 (Averag (None, 1, 50, 32)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_131 (Conv2D)          (None, 1, 50, 64)         18496     \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_75 (Averag (None, 1, 50, 64)         0         \n",
+      "_________________________________________________________________\n",
+      "dense_60 (Dense)             (None, 1, 50, 32)         2080      \n",
+      "_________________________________________________________________\n",
+      "dense_61 (Dense)             (None, 1, 50, 2)          66        \n",
+      "=================================================================\n",
+      "Total params: 25,346\n",
+      "Trainable params: 25,346\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_discriminator_model(blockSize):\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(layers.Reshape((blockSize, 2, 1)))\n",
+    "    model.add(layers.Conv2D(64, (2, 1), strides=(1, 1), padding='same',\n",
+    "                                     input_shape=[1, blockSize, 2]))\n",
+    "    model.add(layers.LeakyReLU())\n",
+    "    model.add(layers.Dropout(0.3))\n",
+    "    model.add(layers.Conv2D(128, (5, 5), strides=(2, 2), padding='same'))\n",
+    "    model.add(layers.LeakyReLU())\n",
+    "    model.add(layers.Dropout(0.3))\n",
+    "\n",
+    "    model.add(layers.Flatten())\n",
+    "    model.add(layers.Dense(1))\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discriminator = make_discriminator_model(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = test(feature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1800, 1, 50, 2), dtype=float32, numpy=\n",
+       "array([[[[ 0.00037026,  0.13746029],\n",
+       "         [-0.05136422,  0.09157552],\n",
+       "         [ 0.1714328 ,  0.04109024],\n",
+       "         ...,\n",
+       "         [-0.08155759, -0.08287971],\n",
+       "         [ 0.12028605,  0.1950788 ],\n",
+       "         [ 0.07141979, -0.02917736]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.05944354,  0.1513247 ],\n",
+       "         [-0.0920556 ,  0.04133406],\n",
+       "         [-0.03832257,  0.12166601],\n",
+       "         ...,\n",
+       "         [ 0.16068234,  0.01410095],\n",
+       "         [ 0.02955827, -0.0852177 ],\n",
+       "         [ 0.00064646,  0.00942906]]],\n",
+       "\n",
+       "\n",
+       "       [[[-0.00330014,  0.07221408],\n",
+       "         [ 0.04634834,  0.03644053],\n",
+       "         [ 0.02091403, -0.05854452],\n",
+       "         ...,\n",
+       "         [ 0.0098161 , -0.04307511],\n",
+       "         [ 0.1597771 , -0.00241431],\n",
+       "         [ 0.04092788,  0.03747279]]],\n",
+       "\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "\n",
+       "       [[[ 0.2759256 ,  0.1395744 ],\n",
+       "         [ 0.17122787, -0.02862463],\n",
+       "         [ 0.1894289 ,  0.1769046 ],\n",
+       "         ...,\n",
+       "         [-0.05508702,  0.04679802],\n",
+       "         [ 0.15306714,  0.20346418],\n",
+       "         [-0.07002186, -0.15863967]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.0697418 ,  0.19261752],\n",
+       "         [-0.06108332,  0.01551439],\n",
+       "         [ 0.24890071,  0.10475461],\n",
+       "         ...,\n",
+       "         [-0.01432163, -0.041964  ],\n",
+       "         [ 0.2963045 ,  0.36535096],\n",
+       "         [ 0.08344436, -0.07260675]]],\n",
+       "\n",
+       "\n",
+       "       [[[-0.053363  ,  0.19257197],\n",
+       "         [-0.07307315, -0.0164958 ],\n",
+       "         [-0.06051653,  0.02221821],\n",
+       "         ...,\n",
+       "         [-0.06405602,  0.0425455 ],\n",
+       "         [ 0.2540053 ,  0.29218   ],\n",
+       "         [-0.01955524, -0.13502896]]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1800, 1, 50, 2), dtype=float32, numpy=\n",
+       "array([[[[ 0.10994416, -0.6041307 ],\n",
+       "         [-0.631116  , -0.7077427 ],\n",
+       "         [ 0.58133477,  1.0377582 ],\n",
+       "         ...,\n",
+       "         [-0.5012339 , -0.20269427],\n",
+       "         [-0.54708403, -0.82357615],\n",
+       "         [ 0.07319508, -0.18521655]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.12745598, -0.57126164],\n",
+       "         [ 0.14743574,  0.08450048],\n",
+       "         [-1.1996803 , -0.6374312 ],\n",
+       "         ...,\n",
+       "         [ 0.89849305,  0.33909002],\n",
+       "         [ 1.0944104 , -0.09126516],\n",
+       "         [-0.23160209, -0.8577409 ]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.24756332, -0.40372282],\n",
+       "         [ 0.2517316 ,  0.18184757],\n",
+       "         [ 0.17659989,  0.83757323],\n",
+       "         ...,\n",
+       "         [ 0.38173804, -0.2742804 ],\n",
+       "         [ 0.9795173 ,  0.9120796 ],\n",
+       "         [ 0.993928  , -0.40394238]]],\n",
+       "\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "\n",
+       "       [[[ 1.0704478 , -0.82411754],\n",
+       "         [ 0.7131251 , -0.7669763 ],\n",
+       "         [ 0.52348363, -1.2603575 ],\n",
+       "         ...,\n",
+       "         [-0.7567104 ,  0.8079492 ],\n",
+       "         [ 0.71830404, -0.19130579],\n",
+       "         [-0.7463313 ,  0.55545753]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.5107773 , -0.08257426],\n",
+       "         [ 0.00631487,  0.64089423],\n",
+       "         [ 0.6637719 ,  0.6818099 ],\n",
+       "         ...,\n",
+       "         [ 0.519952  ,  0.5197553 ],\n",
+       "         [ 0.77382463, -1.1663514 ],\n",
+       "         [ 0.10311094,  1.2587925 ]]],\n",
+       "\n",
+       "\n",
+       "       [[[-0.47094148, -0.48275965],\n",
+       "         [-0.61960995,  0.8703856 ],\n",
+       "         [ 0.15600108,  0.7160645 ],\n",
+       "         ...,\n",
+       "         [-0.70147115,  0.53118885],\n",
+       "         [ 0.77037776,  0.09539896],\n",
+       "         [ 0.05239709,  1.1797714 ]]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature[:, :, :, :2]"
    ]
   },
   {
