--- a/gan_module/gan_module.ipynb
+++ b/gan_module/gan_module.ipynb
@@ -2742,26 +2742,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_generator(blockSize):\n",
     "    model = tf.keras.Sequential()\n",
-    "    model.add(layers.Conv2D(16, (1, 1), strides=(1,1), activation=\"linear\", input_shape=(1, blockSize, 3)))\n",
-    "    model.add(layers.AveragePooling2D((1,1), strides=(1,1)))\n",
-    "    model.add(layers.Conv2D(32, 3, activation=\"linear\", padding='same'))\n",
-    "    model.add(layers.AveragePooling2D((1,1), strides=(1,1)))\n",
-    "    model.add(layers.Conv2D(64, 3, activation=\"linear\", padding='same'))\n",
-    "    model.add(layers.AveragePooling2D((1,1), strides=(1,1)))\n",
-    "    model.add(layers.Dense(32, activation=\"linear\"))\n",
-    "    model.add(layers.Dense(2))\n",
+    "    model.add(layers.Conv2D(16, (1, 3), strides=(1,3), activation=\"linear\", \n",
+    "                            input_shape=(blockSize, 3, 1)))\n",
+    "    model.add(layers.Conv2D(32, (1,16), activation=\"linear\", padding='same'))\n",
+    "    model.add(layers.Conv2D(16, (1,32), activation=\"linear\", padding='same'))\n",
+    "    model.add(layers.Reshape((blockSize, 16, 1)))\n",
+    "    model.add(layers.AveragePooling2D((1,8)))\n",
+    "    model.add(layers.Dense(1))\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2770,47 +2769,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_51\"\n",
+      "Model: \"sequential_115\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_129 (Conv2D)          (None, 1, 50, 16)         64        \n",
+      "conv2d_286 (Conv2D)          (None, 50, 1, 16)         64        \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_73 (Averag (None, 1, 50, 16)         0         \n",
+      "conv2d_287 (Conv2D)          (None, 50, 1, 32)         8224      \n",
       "_________________________________________________________________\n",
-      "conv2d_130 (Conv2D)          (None, 1, 50, 32)         4640      \n",
+      "conv2d_288 (Conv2D)          (None, 50, 1, 16)         16400     \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_74 (Averag (None, 1, 50, 32)         0         \n",
+      "reshape_11 (Reshape)         (None, 50, 16, 1)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_131 (Conv2D)          (None, 1, 50, 64)         18496     \n",
+      "average_pooling2d_219 (Avera (None, 50, 2, 1)          0         \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_75 (Averag (None, 1, 50, 64)         0         \n",
-      "_________________________________________________________________\n",
-      "dense_60 (Dense)             (None, 1, 50, 32)         2080      \n",
-      "_________________________________________________________________\n",
-      "dense_61 (Dense)             (None, 1, 50, 2)          66        \n",
+      "dense_151 (Dense)            (None, 50, 2, 1)          2         \n",
       "=================================================================\n",
-      "Total params: 25,346\n",
-      "Trainable params: 25,346\n",
+      "Total params: 24,690\n",
+      "Trainable params: 24,690\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
-   "source": [
-    "test.summary()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
