--- a/gan_module/cnn_test.ipynb
+++ b/gan_module/cnn_test.ipynb
@@ -303,6 +303,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/donhomlee/Documents/DeepLearning/gan_module\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "cwd = os.getcwd()\n",
+    "print(cwd)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
