--- a/gan_module/gan_module.ipynb
+++ b/gan_module/gan_module.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'signal': [0.1887183040380478, 0.9311000108718872]}\n"
+      "{'signal': [0.2122480720281601, 0.919700026512146]}\n"
      ]
     }
    ],
@@ -2989,6 +2989,65 @@
    ],
    "source": [
     "feature[:, :, :, :2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def noise_generator(blockSize):\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(layers.Reshape((blockSize,3), input_shape=(blockSize, 3)))\n",
+    "    model.add(layers.Dense(32,  activation=\"linear\"))\n",
+    "    model.add(layers.Dense(16, activation=\"linear\"))\n",
+    "    model.add(layers.Dense(32, activation=\"linear\"))\n",
+    "    model.add(layers.Dense(2))\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = noise_generator(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_5\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "reshape_1 (Reshape)          (None, 50, 3)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_14 (Dense)             (None, 50, 32)            128       \n",
+      "_________________________________________________________________\n",
+      "dense_15 (Dense)             (None, 50, 16)            528       \n",
+      "_________________________________________________________________\n",
+      "dense_16 (Dense)             (None, 50, 32)            544       \n",
+      "_________________________________________________________________\n",
+      "dense_17 (Dense)             (None, 50, 2)             66        \n",
+      "=================================================================\n",
+      "Total params: 1,266\n",
+      "Trainable params: 1,266\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.summary()"
    ]
   },
   {
